--- a/memoria/capitulos/0-Agradecimientos.tex
+++ b/memoria/capitulos/0-Agradecimientos.tex
@@ -1,5 +1,9 @@
 \chapter*{Agradecimientos}
+En primer lugar, me gustaría dar las gracias a mi familia por el apoyo que me ha dado a lo largo de este tiempo. Todos ellos han mostrado interés por el trabajo y lo han hecho más llevadero. Sobre todo quiero mencionar a mis padres, a mi hermano y a Laura, los cuales me han animado, me han dado todo su cariño, y me han ayudado en los momentos más difíciles, pues sin ellos no hubiese sido posible conseguirlo.\\
 
+Gracias a José María y a Julio, por su dedicación y apoyo en todos estos meses de desarrollo del trabajo, por lo ánimos y por sus ideas y ayuda.\\
+
+Por ultimo, quiero dar las gracias a mis amigos que me han estado ahí tanto en buenos como en malos momentos: Pablo, Ione, Víctor, Fran, Nacho, Isa, Gero, ...\\
 \begin{flushright}
 	\emph{¡Muchas gracias a todos!}
 \end{flushright}
