--- a/memoria/capitulos/0-Resumen.tex
+++ b/memoria/capitulos/0-Resumen.tex
@@ -1,3 +1,13 @@
 \chapter*{Resumen}
+Gracias al auge de la robótica en la actualidad, cada vez encontramos más productos robóticos a nuestro alrededor, por ejemplo robots industriales, robots en logística automatizada, aspiradoras, coches con funciones automáticas, etc. Además muchos de ellos están incluyendo técnicas de \acrfull{va} para poder procesar el entorno en el que están de una manera más cercana a como lo hacen los humanos.\\
 
-Resumen
+Es por ello que se necesitan más especialistas en este campo. Debido a esto, surgen plataformas dedicadas a la formación y aprendizaje de personas de todas las edades. Una de ellas es Kibotics. Esta plataforma pone al alcance de los más pequeños un entorno seguro de aprendizaje, tanto con robots simulados como reales. Gracias a Kibotics, los niños pueden aprender a manejar robots desde el navegador y sin ningún tipo de requerimiento previo. El entorno facilitado a los niños ofrece un conjunto de ejercicios educativos de programación de robots en dos lenguajes, \textit{Python} y \textit{Scratch}.\\
+
+El objetivo principal de este \acrfull{tfm} es enriquecer la plataforma con procesamiento visual complejo y que a su vez sea sencilla de usar, permitiendo una detección visual robusta de objetos en imágenes utilizando técnicas de aprendizaje profundo. Esta arquitectura desarrollada sirve tanto para los robots reales como para los simulados.
+
+Para comprobar el funcionamiento de ambas arquitecturas se han desarrollado dos comportamientos:
+\begin{itemize}
+  \item \textbf{Comportamiento SiguePersona visual con drone real}. Programado en \textit{Python}.
+  \item \textbf{Comportamiento  SiguePersona  visual  con  drone  simulado}. Programado en \textit{JavaScript}.
+\end{itemize}
+
