--- a/memoria/capitulos/7-Conclusiones.tex
+++ b/memoria/capitulos/7-Conclusiones.tex
@@ -17,4 +17,5 @@ Las contribuciones de este \acrshort{tfm} han abierto las posibilidades para des
 \begin{itemize}
   \item \textbf{Creación de prácticas que utilicen esta tecnología}. Se ha asentado la base, pero ahora toca desarrollar nuevas prácticas de seguimiento de personas o de otros objetos como señales de tráfico, semáforos, etc.
   \item \textbf{Aumentar el número de opciones en cuanto a detección}, como por ejemplo un sigue persona que detecte caras para poder seguir a una persona concreta en un grupo
+  \item Se puede explorar la identificación de personas particulares.
 \end{itemize}
